bakery backend structure complete

--- a/adminSite/admin-stats.html
+++ b/adminSite/admin-stats.html
@@ -49,8 +49,8 @@
                 <div class="three columns"  id="sideNav">
                     <nav id="sidebar">
                         <ul>
-                            <li><a href="" class="active">Report</a></li>
-                            <li><a href="stats">Stats</a></li>
+                            <li><a href="report">Reports</a></li>
+                            <li><a href="" class="active">Stats</a></li>
                             <li><a href="management">User Management</a></li>
                         </ul>
                     </nav>
@@ -59,6 +59,7 @@
 
                 <div id="report-content" class="seven columns">
 
+                    <!--
                     <div class="section dashboard-1">
                         <div class="container">
                             <h4>Dashboard</h4>
@@ -66,15 +67,16 @@
                         </div>
                         <hr>
                     </div>
+                    -->
 
-                    <!--
                     <div class="section dashboard-1">
                         <div class="container">
-                            <h5>Error Stream..</h5>
+                            <h5>Stats for the Bakery Website<h5>
                         </div>
                         <hr>
                     </div>
 
+                    <!--
                     <div class="section dashboard-2">
                         <div class="container">
                             <h5>More Stuff...</h5>
