--- a/adminSite/baker-extra.html
+++ b/adminSite/baker-extra.html
@@ -49,10 +49,10 @@
             <div class="three columns" id="sideNav">
                 <nav id="sidebar">
                     <ul>
-                        <li><a href="" class="active">Report</a></li>
+                        <li><a href="report">Report</a></li>
                         <li><a href="stocks">Stocks</a></li>
                         <li><a href="ads">Advertisements</a></li>
-                        <li><a href="extra">Extra</a></li>
+                        <li><a href="" class="active">Extra</a></li>
                     </ul>
                 </nav>
 
@@ -62,13 +62,7 @@
 
                 <div class="section dashboard-1">
                     <div class="container">
-                        <h4>Weekly Report</h4>
-                        <h5 class="value-heading">Actual Sales</h5>
-                        <p class="value-description">This is the acutal sales of the week<p>
-                        <img class="u-max-full-width" src="actual-sales.png" id="actualSales-img">
-                        <h5 class="value-heading">Missed Sales</h5>
-                        <p class="value-description">These are the sales we have missed this week<p>
-                        <img class="u-max-full-width" src="missed-sales.png" id="actualSales-img">
+                        <h4>Extra Graphs</h4>
                     </div>
                 </div>
 
@@ -141,7 +135,7 @@ height: 100vw;
 
 @media screen and (min-width: 600px) {
 #sideNav {
-height: 52vw;
+height: 100vw;
 }
 }
 </style>
