--- a/adminSite/admin-management.html
+++ b/adminSite/admin-management.html
@@ -49,9 +49,9 @@
                 <div class="three columns"  id="sideNav">
                     <nav id="sidebar">
                         <ul>
-                            <li><a href="" class="active">Report</a></li>
+                            <li><a href="report">Report</a></li>
                             <li><a href="stats">Stats</a></li>
-                            <li><a href="management">User Management</a></li>
+                            <li><a href="" class="active">User Management</a></li>
                         </ul>
                     </nav>
 
@@ -59,6 +59,7 @@
 
                 <div id="report-content" class="seven columns">
 
+                    <!--
                     <div class="section dashboard-1">
                         <div class="container">
                             <h4>Dashboard</h4>
@@ -67,7 +68,6 @@
                         <hr>
                     </div>
 
-                    <!--
                     <div class="section dashboard-1">
                         <div class="container">
                             <h5>Error Stream..</h5>
@@ -75,6 +75,7 @@
                         <hr>
                     </div>
 
+                    -->
                     <div class="section dashboard-2">
                         <div class="container">
                             <h5>More Stuff...</h5>
@@ -82,7 +83,6 @@
                         </div>
                         <hr>
                     </div>
-                    -->
 
                 </div>
             </div>
