--- a/adminSite/baker-ads.html
+++ b/adminSite/baker-ads.html
@@ -45,52 +45,28 @@
     </div>
 
     <div class="content">
-        <div class="row">
             <div class="three columns" id="sideNav">
                 <nav id="sidebar">
                     <ul>
-                        <li><a href="" class="active">Report</a></li>
+                        <li><a href="report">Report</a></li>
                         <li><a href="stocks">Stocks</a></li>
-                        <li><a href="ads">Advertisements</a></li>
+                        <li><a href="" class="active">Advertisements</a></li>
                         <li><a href="extra">Extra</a></li>
                     </ul>
                 </nav>
-
             </div>
 
             <div id="report-content" class="seven columns">
-
-                <div class="section dashboard-1">
+                <div class="section Ads-performance">
                     <div class="container">
-                        <h4>Weekly Report</h4>
-                        <h5 class="value-heading">Actual Sales</h5>
-                        <p class="value-description">This is the acutal sales of the week<p>
-                        <img class="u-max-full-width" src="actual-sales.png" id="actualSales-img">
-                        <h5 class="value-heading">Missed Sales</h5>
-                        <p class="value-description">These are the sales we have missed this week<p>
-                        <img class="u-max-full-width" src="missed-sales.png" id="actualSales-img">
+                        <h2>Ads Performance</h2>
+                        <div class="twelve columns" id="ads-grid">
+                            <p class="value-description">This is how this ad performed...</p>
+                            <img class="u-max-full-width" src="#" id="adsPerformance-img">
+                        </div>
                     </div>
                 </div>
-
-                <!--
-                    <div class="section dashboard-1">
-                        <div class="container">
-                            <h5>Error Stream..</h5>
-                        </div>
-                        <hr>
-                    </div>
-
-                    <div class="section dashboard-2">
-                        <div class="container">
-                            <h5>More Stuff...</h5>
-
-                        </div>
-                        <hr>
-                    </div>
-                    -->
-
             </div>
-        </div>
 
     </div>
 </body>
@@ -141,11 +117,9 @@ height: 100vw;
 
 @media screen and (min-width: 600px) {
 #sideNav {
-height: 52vw;
+height: 100vw;
 }
 }
 </style>
-
 -->
-
 </html>
