--- a/adminSite/login.html
+++ b/adminSite/login.html
@@ -1,5 +1,5 @@
 <?php
-    session_start();
+   include('session.php');
 ?>
 <!DOCTYPE html>
 <html lang="en">
@@ -49,29 +49,29 @@
             <div class="container">
                 <div class="row">
                     <div class="tewlve column login-form">
-                        <form id="login-form" action="index.php" action="POST">
+                        <form id="login-form" action=".index.php" action="POST">
                             <div class="row">
                                 <div class="twelve columns">
-                                    <label for="username-input">Username</label>
+                                    <label for="Username">Username</label>
                                     <input class="u-full-width" name="username" placeholder="User" id="username-input">
                                 </div>
                             </div>
 
                             <div class="row">
                                 <div class="twelve columns">
-                                    <label for="password-input">Password</label>
+                                    <label for="Password">Password</label>
                                     <input class="u-full-width" name="password" type="password" placeholder="Type in your password" id="password-input">
                                 </div>
                             </div>
 
                             <label class="AdminDropdown">
-                                <label for="selectAdmin">Log in as</label>
+                                <label for="admin-label">Log in as</label>
                                 <select class="u-full-width" id="selectAdmin">
                                     <option value="Admin-option">Admin</option>
                                 </select>
                             </label>
-
-			                <button class="button-primary" id="login-button" type="submit" value="Submit" formmethod="post" formaction='index.php'>Submit</button>
+			    <button class="button-primary" id="login-button" type="submit" 
+				    value="Submit" formmethod="post" formaction='index.php'>Submit</button>
                         </form>
 
                         <!-- Always wrap checkbox and radio inputs in a label and use a <span class="label-body"> inside of it -->
