--- a/adminSite/baker-report.html
+++ b/adminSite/baker-report.html
@@ -65,10 +65,10 @@
                         <h4>Weekly Report</h4>
                         <h5 class="value-heading">Actual Sales</h5>
                         <p class="value-description">This is the acutal sales of the week<p>
-                        <img class="u-max-full-width" src="actual-sales.png" id="actualSales-img">
+                        <img class="u-max-full-width" src="sales_data" id="actualSales-img">
                         <h5 class="value-heading">Missed Sales</h5>
                         <p class="value-description">These are the sales we have missed this week<p>
-                        <img class="u-max-full-width" src="missed-sales.png" id="actualSales-img">
+                        <img class="u-max-full-width" src="missed_data" id="actualSales-img">
                     </div>
                 </div>
 
