--- a/adminSite/baker-ads.html
+++ b/adminSite/baker-ads.html
@@ -62,7 +62,7 @@
                         <h2>Ads Performance</h2>
                         <div class="twelve columns" id="ads-grid">
                             <p class="value-description">This is how this ad performed...</p>
-                            <img class="u-max-full-width" src="#" id="adsPerformance-img">
+                            <img class="u-max-full-width" src="ad_data" id="adsPerformance-img">
                         </div>
                     </div>
                 </div>
