--- a/adminSite/baker-extra.html
+++ b/adminSite/baker-extra.html
@@ -63,6 +63,12 @@
                 <div class="section dashboard-1">
                     <div class="container">
                         <h4>Extra Graphs</h4>
+			 <div class="two-half column" id="actualSales-grid">
+                                <h5 class="value-heading">Customer Wishlist</h5>
+                                <p class="value-description">Users are searching for the following pastries...</p>
+                                <img class="u-max-full-width" src="wishlist_data" id="actualSales-img">
+                            </div>
+                            <div class="two-half column" id="missedSales-grid">
                     </div>
                 </div>
 
