--- a/clientSite/index.html
+++ b/clientSite/index.html
@@ -55,11 +55,16 @@
 
     <!-- Primary Page Layout
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <div class="top-nav">
-        <div class="container">
-            <h1>CSE135 Bakery</h1>
+        <div class="top-nav">
+            <div class="container">
+                <div id="nav">
+                    <ul>
+                        <li class="one-half column" style="max-width: 45%"><h1><a href="./index.html" id="logo-button" onclick="registerClick('logo-button')">CSE135 Bakery</a></h1>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
-    </div>
 
     <div class="section billboard">
         <div class="container">
